﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.13...]
### 2019-03-15
	Changed: Maximum powerdown delay changed from 1 minute to 5 minutes.
	Changead: NVM warnings should be now more sane and uniform in presentation
### 2019-03-14
	Internal: Various small config access improvements to minimize errors.
### 2019-03-13
	Replaced: SharpConfig with custom .ini handler.
### 2019-03-10
	Removed: --bootdelay argument. If delay is desired, task scheduler can be used for it.
	Fixed: Some message dialogs were positioned oddly at top-left corner of the screen.
	Changed: Some heavy initialization is deferred until later to allow normal initialization to finish sooner.
### 2019-03-09
	Changed: Free memory action is now more informative on what it does and what will happen.
	Fixed: User idletime calculation now works correctly, especially at the Windows API stated failpoint of 49 days.
	Added: Health monitor warns about the 49 day wraparound occurring.
### 2019-03-08
	Changed: Watchlist edit now tries to autofill executable name when available.
	Fixed: Watchlist executable validation now complains if the file has no extension.
	Added: Health monitor pressure warning now also informs of the pressure having been successfully alleviated.
	Added: Refresh option to process select dialog.
	Changed: Process select dialog now shows initial state more quickly instead of delaying until refresh is finished.
	Fixed: Power debug was broken if not enabled before launch.
### 2019-03-01
	Fixed: ObjectDisposedException on exit.
	Fixed: ArgumentOutOfRangeException on new rule creation
	Fixed: I/O priority was being affected with I/O priority disabled, if foreground monitor was also enabled.
		This used invalid value however, which should've caused it to be ignored regardless, however.
	Fixed: Path and File name validator in watchlist rule editor behaving badly if the field was empty.